<resources>
    <string name="app_name">ExpenseTracker</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="newUser">Do not have account? Sign Up here.</string>
    <string name="forgot">Forgot password?</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    <string name="back">BACK</string>-->
    <!--    <string name="hide_pwd">Hide Password</string>-->
    <!--    <string name="show_pwd">Show Password</string>-->
    <!--    <string name="hello_world">Hello world!</string>-->
    <!--    <string name="action_settings">Settings</string>-->
    <!--    <string name="closebutton">Close Button for Activity</string>-->
</resources>
